# ra_framework

./: .gitattributes  .gitignore  CMakeLists.txt  GomosOptiXModel.sln  LICENSE  compile_ptx_modules.py  ra.sln  rt_framework.sln
GomosOptiXModel/: GomosOptiXModel.args.json  GomosOptiXModel.vcxproj  GomosOptiXModel.vcxproj.filters  atmospheric_layer.cpp  atmospheric_layer.h  atmospheric_layer.ptx  compile_ptx_modules_config.xml  constants.h  datetime.cpp  datetime.h  gomos_gpu_kernel.cu  gomos_ray_generator.h  has_contract_with_optix_context.cpp  has_contract_with_optix_context.h  has_contract_with_optix_program.cpp  has_contract_with_optix_program.h  hashed_string.cpp  hashed_string.h  log.cpp  log.h  main.cpp  matrix_types.h  optix_buffer.h  optix_buffer_tuner.inl  optix_context.cpp  optix_context.h  optix_geometry.h  optix_geometry_group.cpp  optix_geometry_group.h  optix_material.h  optix_program.cpp  optix_program.h  optix_ray_generator.cpp  optix_ray_generator.h  optix_scene.h  optix_scene_section.cpp  optix_scene_section.h  optix_transform.cpp  optix_transform.h  ox_exception.cpp  (+8 more)
SpookyHash/: SpookyV2.h
_3rd_party/lua/: CMakeLists.txt  lua.c  lua.vcxproj  lua.vcxproj.filters
ox_wrapper/: black_body.cu_tmp.cu  circle.cu_tmp.cu  compile_ptx.py  config.xml  data_store_agents_common.h  ox_wrapper.vcxproj  ox_wrapper.vcxproj.filters  ox_wrapper_log.html  parallel_ray_generator.cu_tmp.cu  ptx.h  recaster_generator.cu_tmp.cu  scattering_rendering_pass.cu_tmp.cu  scattering_rendering_pass_default_shader_config.cu_tmp.cu  settings.json
ox_wrapper_processor/: config.xml  debug.mat  main.cpp  ox_wrapper_processor.args.json  ox_wrapper_processor.vcxproj  test.lua  test.mat
pget/: CMakeLists.txt  payload.h  pget_detector_array.cpp  pget_detector_array.hpp  pget_device.hpp  ptx.h
property_sheets/: _3rd_party.props  optix.props  ox_wrapper_debug_x64.props  (+3 more)
ra/: CMakeLists.txt  compile_ptx.py  config.xml  ptx.h  ra.vcxproj  ra.vcxproj.filters  ra_log.html  settings.json
ra/ra/: basic_factory.cpp  basic_factory.h  buffer.cpp  buffer.h  constants.h  context.cpp  context.h  contract_with_context.cpp  contract_with_context.h  contract_with_programs.cpp  contract_with_programs.h  entity.cpp  entity.h  exception.cpp  exception.h  factory_initializer_sentinel.cpp  factory_initializer_sentinel.h  geometry.cpp  geometry.h  geometry_group.cpp  geometry_group.h  init.cpp  init.h  lua_utility_functions_library.cpp  lua_utility_functions_library.h  material.cpp  material.h  material_assembly.cpp  material_assembly.h  miss_shader.cpp  miss_shader.h  miss_shader_assembly.cpp  miss_shader_assembly.h  program.cpp  program.h  ra_fwd.h  ray_generator.cpp  ray_generator.h  ray_generator_with_output_buffer.cpp  ray_generator_with_output_buffer.h  (+15 more)
ra/ra/data_store_agents/: data_store_agents_factory.cpp  data_store_agents_factory.h  matlab_v4.cpp  matlab_v4.h  ra_data_store_agents_fwd.h
ra/ra/materials/: black_body.cpp  black_body.cu  black_body.h  materials_factory.cpp  materials_factory.h  ra_materials_fwd.h
ra/ra/materials/ptx/: black_body.ptx
ra/ra/ray_casters/: parallel_ray_generator.cpp  parallel_ray_generator.cu  parallel_ray_generator.h  ra_ray_casters_fwd.h  ray_casters_factory.cpp  ray_casters_factory.h  recaster_generator.cpp  recaster_generator.cu  recaster_generator.h
ra/ra/ray_casters/ptx/: parallel_ray_generator.ptx  recaster_ray_generator.ptx
ra/ra/rendering_passes/: ra_rendering_passes_fwd.h  rendering_pass.cpp  rendering_pass.h  rendering_passes_factory.cpp  rendering_passes_factory.h  scattering_rendering_pass.cpp  scattering_rendering_pass.cu  scattering_rendering_pass.h  scattering_rendering_pass_default_shader_config.cu
ra/ra/rendering_passes/ptx/: scattering_rendering_pass.ptx  scattering_rendering_pass_default_shader_config.ptx
ra/ra/shapes/: circle.cpp  circle.cu  circle.h  ra_shapes_fwd.h  shapes_factory.cpp  shapes_factory.h  sphere.cpp  sphere.cu  sphere.h
ra/ra/shapes/ptx/: circle.ptx
ra/ra/util/: datetime.cpp  datetime.h  hashed_string.h  log.cpp  log.h  lua_support.cpp  lua_support.h  matrix_types.h  misc.cpp  misc.h  optional.h  static_vector.h
ra/src/: basic_factory.cpp  basic_factory.h  buffer.h  buffer_tuner.inl  context.cpp  context.h  contract_with_context.cpp  contract_with_programs.h  entity.cpp  entity.h  exception.h  factory_initializer_sentinel.h  geometry.cpp  geometry.h  geometry_group.cpp  geometry_group.h  init.cpp  init.h  lua_utility_functions_library.cpp  lua_utility_functions_library.h  material.cpp  material.h  material_assembly.cpp  material_assembly.h  miss_shader.h  miss_shader_assembly.h  program.cpp  program.h  ptx.h  ra_fwd.h  ray_generator.cpp  ray_generator.h  ray_generator_with_output_buffer.cpp  ray_generator_with_output_buffer.h  ray_occlusion_payload.h  ray_payloads.h  scene.cpp  scene.h  scene_section.cpp  scene_section.h  (+6 more)
ra/src/data_store_agents/: data_store_agents_factory.cpp  data_store_agents_factory.h  matlab_v4.cpp  matlab_v4.h  ra_data_store_agents_fwd.h
ra/src/materials/: black_body.cpp  black_body.cu  black_body.h  materials_factory.cpp  materials_factory.h
ra/src/ray_casters/: parallel_ray_generator.cpp  parallel_ray_generator.cu  parallel_ray_generator.h  ray_casters_factory.cpp  ray_casters_factory.h  recaster_generator.cpp  recaster_generator.cu  recaster_generator.h
ra/src/rendering_passes/: nvcc_compiler.config  ra_rendering_passes_fwd.h  rendering_pass.cpp  rendering_pass.h  rendering_passes_factory.cpp  rendering_passes_factory.h  scattering_rendering_pass.cpp  scattering_rendering_pass.cu  scattering_rendering_pass.h  scattering_rendering_pass_default_shader_config.cu  scattering_rendering_pass_direct.cu  scattering_rendering_pass_indirect.cu
ra/src/shapes/: circle.cpp  circle.h  shapes_factory.h  sphere.cpp  sphere.cu  sphere.h
ra/src/util/: hashed_string.cpp  hashed_string.h  log.h  lua_support.cpp  lua_support.h  misc.cpp  optional.h  optix_format_traits.h  static_vector.h
ra_processor/: CMakeLists.txt  main.cpp  ra_processor.args.json  ra_processor.filters  ra_processor.vcxproj
(+169 files in other folders)
